--- a/app/views/topnav.html
+++ b/app/views/topnav.html
@@ -1,6 +1,7 @@
 <link rel="stylesheet" href="http://lab.lepture.com/editor/editor.css" />
 <script type="text/javascript" src="http://lab.lepture.com/editor/editor.js"></script>
 <script type="text/javascript" src="http://lab.lepture.com/editor/marked.js"></script>
+<!-- <script src="http://rawgit.com/tushariscoolster/ng-sweet-alert/master/ng-sweet-alert.js"></script> -->
 
 <header ng-if="!root.sidebarEnabled" class="main-header">
     <div class="container topnav">
