Edited the flow for report page
The user arrives at a view of the search bar, and
then types in username to search for.

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -58,6 +58,9 @@
 	color: #fff;
 	background-color: $btn-loklak-blue;
 	border-color: #00acd6;
+  border-radius: 15px;  
+  width: 177px;
+  margin-left: -12%;
 }
 
 .btn-loklak-blue[disabled]:hover,
