--- a/app/styles/_analyze.scss
+++ b/app/styles/_analyze.scss
@@ -43,12 +43,12 @@ td
 }
 .inputname
 {
-    color: #292f33;
-    margin-top:8px;
+    color: #55acee;
+    margin-top:0px;
     background-color: #fff;
     border: 2px solid #e1e8ed;
     border-radius: 21px;
-    width: 100%;
+    width: 105%;
     padding: 8px 10px;
     font-size: 14px;
     
