--- a/app/views/signin-twitter.html
+++ b/app/views/signin-twitter.html
@@ -1,7 +1,6 @@
-<div ng-show="(isLoggedIn)" class="twitter-session">
-	<!-- <img id="home-view-user-avatar" ng-click="toggleOptions()" ng-src="{{twitterSession.profile_image_url_https}}" class="user-image" alt="{{twitterSession.name}}"> -->
-	<img id="home-view-user-avatar" ng-click="showOptions=!showOptions" ng-src={{defaultPic}} class="user-image" alt="{{currentUser.name}}">
-		<!-- <div class="hidden-user-info hide">
+<div ng-show="twitterSession" class="twitter-session">
+		<img id="home-view-user-avatar" ng-click="toggleOptions()" ng-src="{{twitterSession.profile_image_url_https}}" class="user-image" alt="{{twitterSession.name}}">
+		<div class="hidden-user-info hide">
 			<ul class="top-options">
 				<li>
 					<a href="./home">
@@ -13,27 +12,13 @@
 			<ul class="bottom-options">
 				<li><a href="#" ng-click="hello('twitter').logout()">Log out</a></li>
 			</ul>
-		</div> -->
-		<div class="hidden-user-info" ng-class="showOptions ? '':'hide' ">
-				<ul class="top-options">
-						<li>
-								<a href="./home">
-								<span class="full-name">{{ currentUser.email }}</span><br>
-								<span class="metadata">View profile</span>
-								</a>
-						</li>
-				</ul>
-				<ul class="bottom-options">
-						<li><a href="#" ng-click="logout();showOptions=!showOptions;">Log out</a></li>
-				</ul>
 		</div>
-
 </div>
 
-<div ng-show="!(isLoggedIn)" class="signin">
+<div ng-show="!twitterSession" class="signin">
 	<a href="">
 		<span class="link" ng-href="#signupModal" data-target="#signupModal">
-			<button type="button" class="btn btn-loklak-blue btn-lg" ng-hide="isLoggedIn" data-toggle="modal" data-target="#signupModal"><i class="fa"></i>Sign Up</button>
+			<button type="button" class="btn btn-loklak-blue btn-lg" data-toggle="modal" data-target="#signupModal"><i class="fa"></i>Sign in</button>
 		</span>
 	</a>
 </div>
